Change in Footer; Button; tags;

--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -105,7 +105,7 @@
             <h3>Resources</h3>
             <a href="playvalorant.com">Valorant</a>
             <a href="https://www.youtube.com/channel/UC8CX0LD98EDXl4UYX1MDCXg">Youtube</a>
-            <a href="#">Facebook</a>
+            <a href="https://www.facebook.com/PlayVALORANT/">Facebook</a>
         </div>
         <div class="container">
             <h3>Contact Us</h3>
