--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -274,13 +274,13 @@
             <h3>Resources</h3>
             <a href="playvalorant.com">Valorant</a>
             <a href="https://www.youtube.com/channel/UC8CX0LD98EDXl4UYX1MDCXg">Youtube</a>
-            <a href="#">Facebook</a>
+            <a href="https://www.facebook.com/PlayVALORANT/">Facebook</a>
         </div>
         <div class="container">
             <h3>Contact Us</h3>
-            <a href="#">WhatsApp</a>
-            <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
+            <p>Email 1: sebastyankurniawan.stu@elyon.sch.id</p>
+            <p>Email 2</p>
+            <p>Email 3</p>
         </div>
     </footer>
 </html>
