--- a/Maps.html
+++ b/Maps.html
@@ -115,7 +115,9 @@
                 <p>There are plenty of small choke points around the map, making explosive utility like Raze's grenades or Viper's Snakebites very powerful tools.</p>
             </div>
         </div>
-        <a href="Basic_Information.html#Match_Up">Match Up</a>
+        <button class="transfer">
+            <a href="Basic_Information.html#Match_Up">Match Up</a>
+        </button>
     </body>
     
     
@@ -132,7 +134,7 @@
             <h3>Resources</h3>
             <a href="playvalorant.com">Valorant</a>
             <a href="https://www.youtube.com/channel/UC8CX0LD98EDXl4UYX1MDCXg">Youtube</a>
-            <a href="#">Facebook</a>
+            <a href="https://www.facebook.com/PlayVALORANT/">Facebook</a>
         </div>
         <div class="container">
             <h3>Contact Us</h3>
