--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -101,11 +101,11 @@
             <h3>Resources</h3>
             <a href="playvalorant.com">Valorant</a>
             <a href="https://www.youtube.com/channel/UC8CX0LD98EDXl4UYX1MDCXg">Youtube</a>
-            <a href="#">Facebook</a>
+            <a href="https://www.facebook.com/PlayVALORANT/">Facebook</a>
         </div>
         <div class="container">
             <h3>Contact Us</h3>
-            <a href="#">WhatsApp</a>
+            <a href="#">Gmail</a>
             <a href="#">Instagram</a>
             <a href="#">Facebook</a>
         </div>
