--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -776,9 +776,8 @@
         </div>
         <div class="container">
             <h3>Contact Us</h3>
-            <a href="#">WhatsApp</a>
-            <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
+            <a href="mailto:sebastyankur@gmail.com">Email</a>
+            <a href="https://www.instagram.com/valorantesports/">Instagram</a>
         </div>
     </footer>
 </html>
