--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -278,9 +278,8 @@
         </div>
         <div class="container">
             <h3>Contact Us</h3>
-            <p>Email 1: sebastyankurniawan.stu@elyon.sch.id</p>
-            <p>Email 2</p>
-            <p>Email 3</p>
+            <a href="mailto:sebastyankur@gmail.com">Email</a>
+            <a href="https://www.instagram.com/valorantesports/">Instagram</a>
         </div>
     </footer>
 </html>
