--- a/Maps.html
+++ b/Maps.html
@@ -138,9 +138,7 @@
         </div>
         <div class="container">
             <h3>Contact Us</h3>
-            <a href="#">WhatsApp</a>
-            <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
-        </div>
+            <a href="mailto:sebastyankur@gmail.com">Email</a>
+            <a href="https://www.instagram.com/valorantesports/">Instagram</a>
     </footer>
 </html>
