--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -278,7 +278,7 @@
         </div>
         <div class="container">
             <h3>Contact Us</h3>
-            <p>Email 1: sebastyankurniawan.stu@elyon.sch.id</p>
+            <p>Email 1</p>
             <p>Email 2</p>
             <p>Email 3</p>
         </div>
