Added Fonts; Added Border for Ability Base

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -751,6 +751,8 @@
                 </div>
             </div>
         </div>
+        <button class="transfer"><a href="Basic_Information.html#Team_Composition">Team Composition</a></button>
+
 
     </body>
     
