Updated Content for patch notes section

--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -82,7 +82,7 @@
         <div class="homebg">            
             <h1 class="titles" id="Patch_Notes">Patch Notes</h1>
             <hr class="titles">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Get the latest update on the upcoming updates and patches to the game. Every major update will include a balance patch that will surely change the flow of the game as well as the Meta strat and team compositoin, so it is crucial to get the up to date information.</p>
             <button class="transfer"><a href="Patch_Notes.html">Learn more...</a></button>
         </div>
     </body>
