Change (PatchNote Thumbnail) Img Style

--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -30,7 +30,7 @@
     </nav>
     <header>
         <img class="logo other" src="Assets/ValorantBasic_logo.png" alt="valorant basic logo">
-        <img class="others" style="height: 270px !important; width: 480px !important;" src="Assets/bg/VALORANT_JETT_LIGHT.jpg" alt="Thumbnail">
+        <img style="height: 270px; width: 480px; display: block; margin: auto;" src="Assets/bg/VALORANT_JETT_LIGHT.jpg" alt="Thumbnail">
     </header>
 
     <body class="patchNoteBody">
