Agent Tips -> Agent Info

--- a/Agent_Info.html
+++ b/Agent_Info.html
@@ -20,19 +20,19 @@
                 </div>
             </div>
     
-            <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="Agent_Info.html">Agent Info</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
         </div>
         <div class="breadcrumbs">
-            <p><a href="ValorantBasic.html">Home</a> / Agent Tips</p>
+            <p><a href="ValorantBasic.html">Home</a> / Agent Info</p>
         </div>
     </nav>
     <header>
         <img class="logo other" src="Assets/ValorantBasic_logo.png" alt="valorant basic logo">
     </header>
     <body>
-        <h1 class="titles" id="Agent_Tips">Agents</h1>
+        <h1 class="titles" id="Agent_Info">Agents</h1>
         <hr class="titles">
         <div class="AgentsBase">
             <div class="Agents items">
@@ -766,7 +766,7 @@
             <h3>Explore</h3>
             <a href="ValorantBasic.html">Home</a>
             <a href="Basic_Information.html">Basic Knowledge</a>
-            <a href="Agent_Tips.html">Agents</a>
+            <a href="Agent_Info.html">Agents</a>
             <a href="Maps.html">Maps</a>
             <a href="Patch_Notes.html">Patch Notes</a>
         </div>
