--- a/Maps.html
+++ b/Maps.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
     
-            <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="Agent_Info.html">Agent Info</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
         </div>
@@ -126,7 +126,7 @@
             <h3>Explore</h3>
             <a href="ValorantBasic.html">Home</a>
             <a href="Basic_Information.html">Basic Knowledge</a>
-            <a href="Agent_Tips.html">Agents</a>
+            <a href="Agent_Info.html">Agents</a>
             <a href="Maps.html">Maps</a>
             <a href="Patch_Notes.html">Patch Notes</a>
         </div>
