--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
     
-            <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="Agent_Info.html">Agent Info</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
         </div>
@@ -50,16 +50,16 @@
             <p>The game is based on sharp gunplay and the tactical abilities and with one life per-round. All players will start with 100 health and they can increase their health by buying either light shields and heavy shields. There are 2 main game modes, unrated and competitive, in both gamemodes, the players play as a set of agents and the first team to reach 13 points to win, but competitive has an overtime mechanic where a team must at least have a 2 point difference in the score. Spike rush and deathmatch are the 2 extra game modes. In Spike Rush, the players play as a set of agents and the first team to reach 4 points is the winner, but every round the same weapon is picked for every player in the lobby with ability orbs that gives special effects when claimed such as, Damage Amp, Health Regen, Tracer Rounds, Crippling Decay, Ultimate Ability, Combat Stim, Golden Gun, Paranoia, Weapon Upgrade and Twin Hunters. In Deathmatch, there will be a total of 12 players that will spawn with 100 health and heavy shields and random agents with abilities turned off in different places in a map and will have to kill each other until they get 40 kills or until the time runs out.</p>
             <button class="transfer"><a href="Basic_Information.html">Learn more...</a></button>
         </div>
-        <!--Agent Tips Section-->
+        <!--Agent Info Section-->
         <div class="homebg">
             <img class="others" src="Assets/bg/VALORANT_Neon.jpg" alt="Thumbnail">
 
-            <h1 class="titles" id="Agent_Tips">Agent Tips</h1>
+            <h1 class="titles" id="Agent_Info">Agent Info</h1>
             <hr class="titles">
             <h2>CREATIVITY IS YOUR GREATEST WEAPON</h2>
             <p>More than guns and bullets, you'll choose an Agent armed with adaptive, swift, and lethal abilities that create opportunities to let your gunplay shine. No two Agents play alike, just as no two highlight reels will look the same.</p>
             <p>There are currently eighteen agents in the game which are Astra, Breach, Brimstone, Chamber, Cypher, Jett, Kay/O, Killjoy, Neon, Omen, Phoenix, Raze, Reyna, Sage, Skye, Sova, Viper, and Yoru. Each agent has four unique abilities, including one ultimate. So far, the agent abilities range from traditional utilities from realistic shooters such as flashbangs and smoke grenades but also include magical themed abilities like bringing up flame walls and bounceable arrows that can act like a radar.</p>
-            <button class="transfer"><a href="Agent_Tips.html">Learn more...</a></button>
+            <button class="transfer"><a href="Agent_Info.html">Learn more...</a></button>
         </div>
         <!--Maps Section-->
         <div class="homebg">
@@ -93,7 +93,7 @@
             <h3>Explore</h3>
             <a href="ValorantBasic.html">Home</a>
             <a href="Basic_Information.html">Basic Knowledge</a>
-            <a href="Agent_Tips.html">Agents</a>
+            <a href="Agent_Info.html">Agents</a>
             <a href="Maps.html">Maps</a>
             <a href="Patch_Notes.html">Patch Notes</a>
         </div>
