--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -237,7 +237,7 @@
             <p>Each kill in Valorant is worth 200 Creds, and planting the spike is worth an additional 300 Creds. 
 
                 If your team falls into a losing streak, there is some additional money allocated for each round you consecutively</p>
-            <button class="transfer" style="width: 80%;"><a href="https://youtu.be/_G3FkHQTev4">Click here to watch a complete Guide on Valorant Economy</a></button>
+            <iframe width="1120" height="630" src="https://www.youtube.com/embed/_G3FkHQTev4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         </div>
         
