--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -233,10 +233,9 @@
         <hr style="width: 30%; border-top: 3px solid;" align="left">
         <div id="Economy">
             <h5 class="Info_Title titles">Economy</h5>
-            <p>Learning the economy is fundamental to understanding VALORANT. It’s the bread and butter of the tactical shooter, attributing to each and every round. It can often be the difference between winning and losing.</p>
-            <p>Each kill in Valorant is worth 200 Creds, and planting the spike is worth an additional 300 Creds. 
-
-                If your team falls into a losing streak, there is some additional money allocated for each round you consecutively</p>
+            <p>At the start of each half all players will get 800 credits, which is enough to buy all the sidearms. If you win the round you will get 3000 credits and if you lose then you will only get 1900 credits. If you lose 2 rounds in a row you will get 2400 credits, if you lose 3 rounds or more in a row then you will get 3400 credits.you earn 200 credits for every kill, 300 credits for planting the spike and 5000 credits on overtime.</p>
+            <p>You can buy abilities and they range from 100 to 300 credits, guns which can go from 150 to 4700 credits and from 400 to 1000 credits for light shield and heavy shields respectively.</p> 
+            <p>Depending on how the first round of the half goes, you could either save and do an eco round where you barely buy anything and save credits, or full buy and use all the credits to have a higher chance to win the next round.</p>
             <iframe width="570" height="315" src="https://www.youtube.com/embed/_G3FkHQTev4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         </div>
