--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -246,6 +246,7 @@
             <h5 class="Info_Title titles">Match Up</h5>
             <img src="Assets/bg/L10_Sillos_Final.jpg" alt="5 agent on blue BG">
             <p>Valorant is a 5v5 Game, so everyone is expected to play the game as a team and with a plan in mind, of course the plan will go along depending on the map, so whichever map you get matched up. Be expected to also fight againts opponents that also play tactically as at the end of the day, whoever has the better strats will win the game. </p>
+            <p>Valorant uses a matchmaking rating system, known as MMR, to rate players in ranked. Every player will have a number associated with their account that adjusts over time – putting them in and out of ranks as they get better.</p>
         </div>
 
         <!--Team Comp Section-->
@@ -254,6 +255,19 @@
         <div id="Team_Composition">
             <h5 class="Info_Title titles">Team Composition</h5>
             <p>There are 4 Roles in Valorant being Duelist, Initiator, Sentinel, and Controller. it is important to at least have each of one role in every game, but there is a five players and four roles, so it is the defining strategy and team composition to have the fifth slot to be filled, be carefull as some team composition are easily countered by the enemy composition. </p>
+            <p>Here is one of the best team composition that are usable on most maps</p>
+            <p>Team Composition 1 - Breach and Jett Combo</p>
+            <p>Breach, Jett, Astra, Skye/Sova, Killjoy</p>
+            <p>Team Composition 2 - Viper Meta</p>
+            <p>Jett, Cypher/Killjoy, Sage, Viper, Skye</p>
+            <p>Team Composition 3 - Balanced Lineup</p>
+            <p>Jett, Astra/Viper, Skye/Sova, Reyna/Raze, Killjoy</p>
+            <p>Team Composition 4 - Dual Controller Meta</p>
+            <p>Viper, Astra, Jett, Sova/Skye, Killjoy/Cypher</p>
+            <p>Team Composition 5 - KAY/O Meta</p>
+            <p>Jett, KAY/O, Sova, Astra/Viper, Killjoy/Cypher</p>
+            <p>Team Composition 6 - Hyper Defensive Meta</p>
+            <p>Jett, Killjoy, Cypher/Sage, Astra/Viper, Sova/Skye</p>
         </div>
     
     </body>
