--- a/Maps.html
+++ b/Maps.html
@@ -40,19 +40,19 @@
         <div class="mapBase">
             <div class="map">
                 <a href="#Ascent">
-                    <img src="Assets/map/Ascent.png" alt="ASCENT">
+                    <img src="Assets/Map/Ascent.png" alt="ASCENT">
                     <h5>ASCENT</h5>
                 </a>
             </div>
             <div class="map">
                 <a href="#Bind">
-                    <img src="Assets/map/Bind.jpg" alt="BIND">
+                    <img src="Assets/Map/Bind.jpg" alt="BIND">
                     <h5>BIND</h5>
                 </a>
             </div>
             <div class="map">
                 <a href="#Breeze">
-                    <img src="Assets/map/Breeze.jpg" alt="BREEZE">
+                    <img src="Assets/Map/Breeze.jpg" alt="BREEZE">
                     <h5>BREEZE</h5>
                 </a>
             </div>
