--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -63,7 +63,7 @@
         </div>
         <!--Maps Section-->
         <div class="homebg">
-            <img class="others" src="Assets/map/Default.png" alt="Thumbnail">
+            <img class="others" src="Assets/Map/Default.png" alt="Thumbnail">
 
             <h1 class="titles" id="Maps">Maps</h1>
             <hr class="titles">
