Fix External Site Link

--- a/Agent_Info.html
+++ b/Agent_Info.html
@@ -772,7 +772,7 @@
         </div>
         <div class="container">
             <h3>Resources</h3>
-            <a href="playvalorant.com">Valorant</a>
+            <a href="https://playvalorant.com">Valorant</a>
             <a href="https://www.youtube.com/channel/UC8CX0LD98EDXl4UYX1MDCXg">Youtube</a>
             <a href="https://www.facebook.com/PlayVALORANT/">Facebook</a>
         </div>
