Bug fix: Agent tips

--- a/Agent_Info.html
+++ b/Agent_Info.html
@@ -725,7 +725,7 @@
                     <p>KAY/O is a machine of war built for a single purpose: neutralizing radiants. His power to suppress enemy abilities cripples his opponents' capacity to fight back, securing him and his allies the ultimate edge.</p>
                     <div class="abilityBase">
                         <div>
-                            <img class="icon"style="width: 40px;height: 40px;display: block;margin-left: auto;margin-right: auto;background: #000;" src="Assets/role/Initiator/Kayo_Q_FlashDrive.png" alt="Kayo"> 
+                            <img class="icon" src="Assets/role/Initiator/Kayo_Q_FlashDrive.png" alt="Kayo"> 
                             <h2>Q - FLASH/DRIVE</h2>
                         </div>
                         <p>EQUIP a flash grenade. FIRE to throw. The flash grenade explodes after a short fuse, blinding anyone in line of sight.</p>       
